# demo-python-app

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
app/: main.py
deploy/base/: deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml
deploy/overlays/dev/: kustomization.yaml
deploy/overlays/production/: hpa.yaml  kustomization.yaml
deploy/overlays/staging/: hpa.yaml  kustomization.yaml
tests/: test_main.py
