[tool.poetry]
name = "hello-python"
version = "0.1.0"
description = ""
authors = ["saarw"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}
anyio = "^4.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
trio = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
