[tool.poetry]
name = "demo-python-app"
version = "0.1.0"
description = ""
authors = ["saarw"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}
pytest-asyncio = "^1.0.0"
structlog = "^25.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
